# StreamServer

./: .clangd  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  conanfile.py  main.cpp  readme.md  requirements.txt  sd.sh
application/: main.cpp
application/include/: StreamSink.h  VideoEncoder.h
application/sources/: StreamServer.cpp  VideoCapture.cpp  VideoEncoder.cpp
include/: StreamServer.h  VideoCapture.h  VideoEncoder.h.ori
scripts/: app_graph_build_order.json  app_graph_info.json  toolchain_aarch64.cmake
sdk/ZLMediaKit/lib/: .gitattributes
sdk/mpp/lib/: .gitattributes  librockchip_mpp.so.1  librockchip_vpu.so.1
sdk/mpp/lib/pkgconfig/: rockchip_mpp.pc  rockchip_vpu.pc
src/: StreamSink.cpp  VideoCapture.cpp  VideoEncoder.cpp  VideoEncoder.cpp.ori
tools/: conan_profile_aarch64  conan_profile_x86_64  conanfile_mpp.py  conanfile_zlmediakit.py
